# genesis

./: .gitignore  README.md  pyproject.toml
api/: requirements.txt
api/src/: config.py  dependencies.py  main.py
api/src/api/v2/: __init__.py  _chat.py  _file.py  _kb.py  _list_knowledgebases.py
api/src/domain/entities/: document.py  embeddings.py  knowledge_base.py  message.py  raw_document.py  thread.py  user.py
api/src/infra/mysql/: dtos.py
api/src/ports/: context_generator_port.py  document_repository_port.py  embeddings_port.py  file_storage_port.py  knowledge_base_repository_port.py  location_port.py  parse_to_markdown_port.py  parse_to_text_port.py  storage_port.py  user_port.py  user_port.py (old)  user_repository_port.py  vector_db_port.py
api/src/repositories/: document_repository.py  knowledge_base_repository.py  user_repository.py
api/src/services/: bm25_service.py  chat_service.py  context_service.py  file_storage_service.py  knowledge_base_service.py  location_service.py  parser_service.py  retriever_service.py  vector_db_service.py
api/src/test/: test.py
api/src/utils/: Agent.py  MinerU_api.py  agent.py  fusion_retriever.py  parser.py  rag_chain.py
bootstrap/: init_mysql_database.sql
file-api-v2/scripts/: init_database.sql
file-api-v2/src/file_api_v2/: config.py  dependencies.py  main.py
file-api-v2/src/file_api_v2/domain/: entities.py
file-api-v2/src/file_api_v2/ports/: chunkers.py  indexing_port.py  knowledge_base_port.py  parser_port.py  parsers.py  raw_document_port.py  repositories.py  storage_port.py  user_port.py  vector_db_port.py
file-api/src/file_api/: config.py  dependencies.py  main.py
frontend/api/: dummy_data.py  main.py  models.py  requirements.txt  socket_connection.py
frontend/ui/: .env.local  package-lock.json  package.json
scripts/: init_database.sql  init_tables.sql
src/document_processing/: document_parser.py  tests.py
tests/api/: playground.py
(+104 files in other folders)
