[tool.poetry]
name = "super-rag"
version = "0.1.0"
description = ""
authors = ["Bastien98 <bastien.moenaert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.4"
pypdf2 = "^3.0.1"
sqlalchemy = "^2.0.36"
rank-bm25 = "^0.2.2"
nltk = "^3.9.1"
asyncio = "^3.4.3"
anthropic = "^0.37.1"
fastapi = "^0.115.4"
llama-index-core = "^0.11.14"
llama-parse = "^0.5.12"
instructor = "^1.5.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
